manifests/phasor-extension/prod-eu-central-1/authorization-policy-allow-argo-rollouts.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-argo-rollouts
  namespace: phasor
spec:
  rules:
    - from:
        - source:
            namespaces:
              - argo-rollouts
